Update - Storyboard enter

--- a/ShirokarasNotebook/Base.lproj/Main.storyboard
+++ b/ShirokarasNotebook/Base.lproj/Main.storyboard
@@ -6,24 +6,23 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Login Root View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Tabbar View Controller-->
+        <scene sceneID="bQ3-TP-Yyq">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="SKLoginRootViewController" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="5EK-fL-46r"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <tabBarController id="Dxd-Jj-diG" customClass="SKTabbarViewController" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="JBa-5c-125"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="nff-kt-Zb7">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="IPz-fB-9kr" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-7" y="34"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="BZw-ed-Qoa">
@@ -34,7 +33,7 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="WhU-JJ-XSZ"/>
+                        <segue destination="Dxd-Jj-diG" kind="relationship" relationship="rootViewController" id="oMF-NT-Me8"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Xyy-sQ-vtT" userLabel="First Responder" sceneMemberID="firstResponder"/>
